# generalized_geodesic

./: readme.md
nist/: .gitignore  README.md  log.md  requirements.txt  run.py
nist/bash/: all_in_one_nist.sh
nist/bash/transfer_learning/: compare.sh  gen_geodesic.sh  otdd_ternary.sh
nist/configs/otdd_map/: config.yaml
nist/configs/scripts/: calculate_otdd.yaml  compare_methods.yaml  default.yaml  gen_geodesic.yaml  knn_dataset.yaml  mccan.yaml  otdd_ternary.yaml  pretrain_classifier.yaml  shot_dependency.yaml
nist/notebooks/: number_results.ipynb  plot_results.ipynb
nist/src/: train.py
nist/src/callbacks/: gmm_callbacks.py  img_callbacks.py  (+3 more)
vtab/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
vtab/bash/: all_in_one_vtab.sh
vtab/src/callbacks/: w2_callbacks.py
vtab/src/datamodules/datasets/: hdf5_dataset.py  small_scale_image_dataset.py  soft_label_imagefolder.py
vtab/src/models/: base_model.py  loss_zoo.py  non_mask_mae.py
vtab/src/networks/: mlp.py  unet_simple.py
vtab/src/otdd/: __init__.py  _deprecated.py  debug.py  plotting.py  utils.py
vtab/src/otdd/pytorch/: datasets.py  distance.py  flows.py  functionals.py  moments.py  nets.py  sqrtm.py  training.py  utils.py  wasserstein.py
vtab/src/pot/: da.py
vtab/src/scripts/: __init__.py  embed_mae.py  fulltrain_vtab.py  knn_vtab.py  mixup_fulltrain_vtab.py  pretrain_vtab.py  vtab_bary_projection.py  vtab_synthetic_ds.py
vtab/src/transfer_learning/: data_utils.py  gen_geodesic.py  mix_transformation.py
vtab/src/utils/: lht_utils.py
vtab/src/viz/: img.py
(+74 files in other folders)
